--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,12 @@
     </div>
     <div class="col-sm-10 ">
 
-      {% block content %}{% endblock %}
-
+      {% block content %}
+        
+      {% endblock %}
+      <hr>
       {% block pagination %}
+        {% include "includes/pagination.html" %}
       {% endblock %}
 
     </div>
